--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,4 +1,4 @@
-ame: JS Actions
+name: haha
 
 on:
   issues:
@@ -7,9 +7,5 @@ on:
 jobs:
   action:
      runs-on: ubuntu-latest
-
      steps:
-       - uses: actions/checkout@v3
-
-         - name: ha-ha
-         uses: ./.github/actions/joke-action
+       - uses: ./.github/actions/joke-action
