--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -8,4 +8,4 @@ jobs:
   action:
      runs-on: ubuntu-latest
      steps:
-       - uses: ./.github/actions/joke-action
+       - uses: .github/actions/joke-action
