--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,4 +1,4 @@
-name: haha
+- name: JS Actions
 
 on:
   issues:
@@ -7,5 +7,9 @@ on:
 jobs:
   action:
      runs-on: ubuntu-latest
+
      steps:
-       - uses: .github/actions/joke-action
+       - uses: actions/checkout@v3
+
+     	 - name: ha-ha
+         uses: ./.github/actions/joke-action
