--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,4 +1,4 @@
-- name: JS Actions
+name: JS Actions
 
 on:
   issues:
@@ -9,7 +9,6 @@ jobs:
      runs-on: ubuntu-latest
 
      steps:
-       - uses: actions/checkout@v3
 
-     	 - name: ha-ha
+         - name: ha-ha
          uses: ./.github/actions/joke-action
