return of the fix path

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -8,4 +8,4 @@ jobs:
      runs-on: ubuntu-latest
      steps:
        - name: ha-ha
-         uses: ./.github/actions/joke-action
+         uses: ../.github/actions/joke-action
