--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -7,5 +7,6 @@ jobs:
   action:
      runs-on: ubuntu-latest
      steps:
+       - uses: actions/checkout@v3
        - name: ha-ha
-         uses: .github/actions/joke-action
+         uses: ./.github/actions/joke-action
